--- a/StudentSimulator/StudentSimulator.csproj
+++ b/StudentSimulator/StudentSimulator.csproj
@@ -43,6 +43,14 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Domain\Game.cs" />
+    <Compile Include="Domain\GameManipulator.cs" />
+    <Compile Include="Domain\GameObject.cs" />
+    <Compile Include="Domain\GlobalMap.cs" />
+    <Compile Include="Domain\Location.cs" />
+    <Compile Include="Domain\Player.cs" />
+    <Compile Include="Domain\Task.cs" />
+    <Compile Include="Domain\TaskResult.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
@@ -50,6 +58,8 @@
     <None Include="App.config" />
   </ItemGroup>
   <ItemGroup>
+    <Folder Include="App\" />
+    <Folder Include="Infrastructure\" />
     <Folder Include="UI\" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
