--- a/StudentSimulator/StudentSimulator.csproj
+++ b/StudentSimulator/StudentSimulator.csproj
@@ -77,14 +77,18 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Domain\Game.cs" />
+    <Compile Include="Domain\LocationBuilder.cs" />
     <Compile Include="Domain\GameManipulator.cs" />
     <Compile Include="Domain\GameObject.cs" />
     <Compile Include="Domain\GlobalMap.cs" />
-    <Compile Include="Domain\ISkillParameters.cs" />
     <Compile Include="Domain\Location.cs" />
     <Compile Include="Domain\Player.cs" />
-    <Compile Include="Domain\StatParameters.cs" />
+    <Compile Include="Domain\PlayerNeeds.cs" />
     <Compile Include="Domain\GameTask.cs" />
+    <Compile Include="Domain\Skills\ILearningSkill.cs" />
+    <Compile Include="Domain\Skills\AlgebraSkill.cs" />
+    <Compile Include="Domain\Skills\PhilosophySkill.cs" />
+    <Compile Include="Domain\Skills\ProgrammingSkill.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="UI\Game.cs" />
