--- a/StudentSimulator/packages.config
+++ b/StudentSimulator/packages.config
@@ -1,6 +1,6 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
-  <package id="Newtonsoft.Json" version="13.0.1" targetFramework="net472" />
+  <package id="Microsoft.Bcl.AsyncInterfaces" version="6.0.0-preview.4.21253.7" targetFramework="net472" />
   <package id="Ryan.MonoGame.Framework.WindowsDX" version="3.7.106" targetFramework="net472" />
   <package id="SharpDX" version="4.0.1" targetFramework="net472" />
   <package id="SharpDX.Direct2D1" version="4.0.1" targetFramework="net472" />
@@ -11,4 +11,12 @@
   <package id="SharpDX.MediaFoundation" version="4.0.1" targetFramework="net472" />
   <package id="SharpDX.XAudio2" version="4.0.1" targetFramework="net472" />
   <package id="SharpDX.XInput" version="4.0.1" targetFramework="net472" />
+  <package id="System.Buffers" version="4.5.1" targetFramework="net472" />
+  <package id="System.Memory" version="4.5.4" targetFramework="net472" />
+  <package id="System.Numerics.Vectors" version="4.5.0" targetFramework="net472" />
+  <package id="System.Runtime.CompilerServices.Unsafe" version="6.0.0-preview.4.21253.7" targetFramework="net472" />
+  <package id="System.Text.Encodings.Web" version="6.0.0-preview.4.21253.7" targetFramework="net472" />
+  <package id="System.Text.Json" version="6.0.0-preview.4.21253.7" targetFramework="net472" />
+  <package id="System.Threading.Tasks.Extensions" version="4.5.4" targetFramework="net472" />
+  <package id="System.ValueTuple" version="4.5.0" targetFramework="net472" />
 </packages>
